@@ -88,4 +88,5 @@ Current
 	- Core: Check for m_muteban in InspIRCd
 	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs
 	- Chakora: Use POSIX::RT::Timer.
-	- API: Added flaglist_add flaglist_del and flag_exists
+	- API: added flaglist_add flaglist_del and flag_exists
+	- API: added event_topic and event_kick
